# SISTEMAS_TIEMPO_R

PWM_NTC/: CMakeLists.txt  sdkconfig
PWM_NTC/main/: CMakeLists.txt  blink_example_main.c
Primer-taller/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  config.env  flash_app_args  flash_project_args  kconfigs_projbuild.in  ldgen_libraries  project_description.json  sdkconfig
Primer-taller/bootloader-prefix/tmp/: bootloader-mkdirs.cmake
Primer-taller/config/: sdkconfig.cmake  sdkconfig.json
Primer-taller/esp-idf/: cmake_install.cmake
Primer-taller/esp-idf/app_update/: cmake_install.cmake
Primer-taller/esp-idf/bootloader/: cmake_install.cmake
Primer-taller/esp-idf/bootloader_support/: cmake_install.cmake
Primer-taller/esp-idf/cxx/: cmake_install.cmake
Primer-taller/esp-idf/efuse/: cmake_install.cmake
Primer-taller/esp-idf/esp_app_format/: cmake_install.cmake
Primer-taller/esp-idf/esp_bootloader_format/: cmake_install.cmake
Primer-taller/esp-idf/esp_common/: cmake_install.cmake
Primer-taller/esp-idf/esp_driver_gpio/: cmake_install.cmake
Primer-taller/esp-idf/esp_hw_support/: cmake_install.cmake
Primer-taller/esp-idf/esp_mm/: cmake_install.cmake
Primer-taller/gdbinit/: gdbinit  symbols
Primer-taller/main/: main.c
rgb_led/: CMakeCache.txt  CMakeLists.txt  README.md  sdkconfig
rgb_led/main/: CMakeLists.txt  ledc_basic_example_main.c  rgb_led.c
taller_2/: CMakeLists.txt  sdkconfig
taller_2/main/: CMakeLists.txt  rgb_led.h  uart_events_example_main.c
(+28 files in other folders)
